--- a/app/assets/stylesheets/jumpstart/announcements.scss
+++ b/app/assets/stylesheets/jumpstart/announcements.scss
@@ -1,6 +1,5 @@
 .announcement {
   strong {
-    color: $gray-700;
     font-weight: 900;
   }
 }
@@ -12,8 +11,7 @@
   -moz-background-clip: padding-box;
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
-  background: $red;
-  content: '';
+  content: "";
   display: inline-block;
   height: 8px;
   width: 8px;
